--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -20,6 +20,7 @@
 .app__profile-item {
   width: 100%;
   display: flex;
+  // background-color: aqua;
   justify-content: flex-start;
   align-items: flex-start;
   // flex-direction: column; // commented
@@ -37,7 +38,7 @@
     text-align: justify;
   }
   img {
-    width: 90%;
+    width: 100%;
     height: 80%;
     object-fit: contain;
     border-radius: 15px;
@@ -53,8 +54,16 @@
   }
 
   @media screen and (max-width: 450px) {
-    width: 70%;
-    margin: 2rem 4rem;
-  flex-direction: column; // commented
+    width: 80%;
+    // margin: 2rem 4rem;
+    flex-direction: column; // commented
+    
+
+    .bold-text {
+      font-size: medium;
+    }
+    p{
+      font-size: 1.10rem;
+    }
   }
 }
