--- a/src/container/Contact/Contact.scss
+++ b/src/container/Contact/Contact.scss
@@ -1,261 +1,57 @@
-.app__contact {
-  flex: 1;
-  width: 100%;
-  flex-direction: column;
-
-  @media screen and (max-width: 768px) {
-    flex-direction: column;
-  }
-}
-
-.app__contact-cards {
-  width: 60%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  margin: 4em 2rem 2rem;
-
-  .app__contact-card {
-    min-width: 290px;
-    display: flex;
-    .app__contact {
-      flex: 1;
-      width: 100%;
-      flex-direction: column;
-
-      @media screen and (max-width: 768px) {
-        flex-direction: column;
-      }
-    }
-
-    .app__contact-cards {
-      width: 60%;
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      flex-wrap: wrap;
-      margin: 4em 2rem 2rem;
-
-      .app__contact-card {
-        min-width: 290px;
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: center;
-
-        margin: 1rem 0;
-        padding: 1rem;
-        border-radius: 10px;
-        cursor: pointer;
-        background-color: #fef4f5;
-
-        transition: all 0.3s ease-in-out;
-
-        img {
-          width: 40px;
-          height: 40px;
-          margin: 0 0.7rem;
-        }
-
-        p {
-          font-weight: 500;
-        }
-        a {
-          text-decoration: none;
-          font-weight: 500;
-        }
-        &:hover {
-          box-shadow: 0 0 25px #fef4f5;
-        }
-
-        @media screen and (max-width: 450px) {
-          width: 100%;
-        }
-      }
-
-      @media screen and (max-width: 768px) {
-        width: 100%;
-      }
-    }
-
-    .app__contact-cards .app__contact-card:last-child {
-      background-color: #f2f7fb;
-    }
-
-    .app__contact-cards .app__contact-card:last-child:hover {
-      box-shadow: 0 0 25px #f2f7fb;
-    }
-
-    .app__contact-form {
-      width: 60%;
-      flex-direction: column;
-      margin: 1rem 2rem;
-
-      div {
-        width: 100%;
-
-        margin: 0.75rem 0;
-        border-radius: 10px;
-        cursor: pointer;
-        background-color: var(--primary-color);
-
-        transition: all 0.3s ease-in-out;
-
-        input,
-        textarea {
-          width: 100%;
-          padding: 0.95rem;
-          border: none;
-          border-radius: 7px;
-          background-color: var(--primary-color);
-
-          font-family: var(--font-base);
-          color: var(--secondary-color);
-          outline: none;
-        }
-
-        textarea {
-          height: 170px;
-        }
-
-        &:hover {
-          box-shadow: 0 0 25px var(--primary-color);
-        }
-      }
-
-      button {
-        padding: 1rem 2rem;
-        border-radius: 10px;
-        border: none;
-        background-color: var(--secondary-color);
-
-        font-weight: 500;
-        color: var(--white-color);
-        outline: none;
-        margin: 2rem 0 0 0;
-        font-family: var(--font-base);
-
-        transition: cubic-bezier(0.55, 0.085, 0.68, 0.53);
-        cursor: pointer;
-
-        &:hover {
-          background-color: #2430af;
-        }
-      }
-
-      @media screen and (max-width: 768px) {
-        width: 100%;
-        margin: 1rem 0;
-      }
-    }
-
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-
-    margin: 1rem 0;
-    padding: 1rem;
-    border-radius: 10px;
-    cursor: pointer;
-    background-color: #fef4f5;
-
-    transition: all 0.3s ease-in-out;
-
-    img {
-      width: 40px;
-      height: 40px;
-      margin: 0 0.7rem;
-    }
-
-    p {
-      font-weight: 500;
-    }
-    a {
-      text-decoration: none;
-      font-weight: 500;
-    }
-    &:hover {
-      box-shadow: 0 0 25px #fef4f5;
-    }
-
-    @media screen and (max-width: 450px) {
-      width: 100%;
-    }
-  }
-
-  @media screen and (max-width: 768px) {
-    width: 100%;
-  }
-}
-
-.app__contact-cards .app__contact-card:last-child {
-  background-color: #f2f7fb;
-}
-
-.app__contact-cards .app__contact-card:last-child:hover {
-  box-shadow: 0 0 25px #f2f7fb;
-}
-
-.app__contact-form {
-  width: 60%;
-  flex-direction: column;
-  margin: 1rem 2rem;
-
-  div {
-    width: 100%;
-
-    margin: 0.75rem 0;
-    border-radius: 10px;
-    cursor: pointer;
-    background-color: var(--primary-color);
-
-    transition: all 0.3s ease-in-out;
-
-    input,
-    textarea {
-      width: 100%;
-      padding: 0.95rem;
-      border: none;
-      border-radius: 7px;
-      background-color: var(--primary-color);
-
-      font-family: var(--font-base);
-      color: var(--secondary-color);
-      outline: none;
-    }
-
-    textarea {
-      height: 170px;
-    }
-
-    &:hover {
-      box-shadow: 0 0 25px var(--primary-color);
-    }
-  }
-
-  button {
-    padding: 1rem 2rem;
-    border-radius: 10px;
-    border: none;
+.parent_div{
     background-color: var(--secondary-color);
-
-    font-weight: 500;
-    color: var(--white-color);
-    outline: none;
-    margin: 2rem 0 0 0;
-    font-family: var(--font-base);
-
-    transition: cubic-bezier(0.55, 0.085, 0.68, 0.53);
-    cursor: pointer;
-
-    &:hover {
-      background-color: #2430af;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    align-items: center;
+}
+.footer_container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--secondary-color);
+    padding-bottom: 10px;
+    @media screen and (max-width: 450px) {
+        display: block;
     }
-  }
+}
 
-  @media screen and (max-width: 768px) {
-    width: 100%;
-    margin: 1rem 0;
-  }
+.footer_item{
+
+    span{
+        font-weight: 500;
+        color: #FFD264;
+    }
+    p{
+        color: white;
+    }
+}
+
+.footer_item_copy{
+    align-items: center;
+    // background-color: aqua;
+    p{
+        font-weight: 200;
+        font-size: 10px;
+        text-align: center;
+        color: #333;
+    }
+}
+
+.footer_item_logo{
+    width: 200px;
+    height: 100px;
+    // background-color: white;
+    img{
+        width: 200px;
+        height: 100%;
+    }
+
+    @media screen and (max-width: 900px) {
+        width: 100%;
+        // background-color: #FFD264;
+    }
 }
